--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://ganeshyarrampati999:nani@3528@cluster.l7ovb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster
+MONGO_URI=uri
 PORT=5001
