--- a/nginix.conf
+++ b/nginix.conf
@@ -1,9 +1,9 @@
-# nginx.conf
 events {}
 
 http {
     server {
         listen 80;
+        server_name wiry.website www.wiry.website;
 
         location / {
             proxy_pass http://backend:5001;
